Fixed bug #22308 (optimized passthru, code is now ~40 times faster).