ext/standard/http_fopen_wrapper.c
@@ -354,7 +354,7 @@ php_stream *php_stream_url_wrap_http(php_stream_wrapper *wrapper, char *path, ch
 							s = resource->path;
 							*s = '/';
 						}
-						s[1] = '\0'; 
+						*(s + 1) = '\0'; 
 						if (resource->path && *(resource->path) == '/' && *(resource->path + 1) == '\0') {
 							snprintf(loc_path, sizeof(loc_path) - 1, "%s%s", resource->path, location);
 						} else {
